<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#95F48C"
    >

    <Button
        android:id="@+id/one"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/minus"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:id="@+id/eight"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_8"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/mul"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/clr"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/clr"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dualZero" />

    <Button
        android:id="@+id/dot"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/dot"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/six"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_6"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/seven"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_7"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/nine"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_9"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/zero"
        android:layout_width="80sp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/dualZero"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/back"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/clr"
        app:layout_constraintTop_toBottomOf="@+id/zero" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/equal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <Button
        android:id="@+id/dualZero"
        android:layout_width="80sp"
        android:layout_height="82dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_00"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/bin"
        android:layout_width="100sp"
        android:layout_height="80sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/binary"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/dot" />

    <Button
        android:id="@+id/divide"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/div"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/five"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_5"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/four"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_4"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/plus"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/three"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_3"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/two"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/_2"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="131dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#7b3ec7"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>